allow parallel with surefire in profile