@@ -474,8 +474,6 @@
                                 <arquillian_http_port>${surefire.forkNumber}509</arquillian_http_port>
                                 <arquillian_sip_port>${surefire.forkNumber}508</arquillian_sip_port>
                             </systemPropertyVariables>
-                            <groups>org.restcomm.connect.commons.annotations.ParallelClassTests</groups>
-                            <excludedGroups>org.restcomm.connect.commons.annotations.UnstableTests</excludedGroups>
                         </configuration>
                         <executions>
                             <execution>
@@ -496,7 +494,19 @@
                             <argLine>-Xms256m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
                             <reuseForks>false</reuseForks>
                             <skipTests>${skipUTs}</skipTests>
-                            <excludedGroups>org.restcomm.connect.commons.annotations.ParallelClassTests or org.restcomm.connect.commons.annotations.UnstableTests</excludedGroups>
+                            <parallel>classes</parallel>
+                            <threadCountClasses>5</threadCountClasses>
+                            <!-- start with low memory to increase forks -->
+                            <argLine>-Xms256m -Xmx2048m -XX:MaxPermSize=512m</argLine>
+                            <systemPropertyVariables>
+                                <!--use different arquillian configuration to tweak maps
+                                depending on forked JVM-->
+                                <arquillian.launch>mss-tomcat-embedded-7-forked</arquillian.launch>
+                                <!-- this will ensure sip and http ports are diff for
+                                every forked JVM/test class-->
+                                <arquillian_http_port>${surefire.forkNumber}509</arquillian_http_port>
+                                <arquillian_sip_port>${surefire.forkNumber}508</arquillian_sip_port>
+                            </systemPropertyVariables>                            
                         </configuration>
                     </plugin>
                 </plugins>
